@@ -1,3 +1,8 @@
+2014-03-18  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* util/pandora_db.pl: fixed the notinit_count in the agents after
+	the delete not init modules.
+
 2014-03-13  Ramon Novoa  <rnovoa@artica.es>
 
 	* util/pandora_db.pl: Do not compact proc modules.
